Mon Aug 17 03:41:52 1998  Tim Janik  <timj@gtk.org>

	* gmodule.h:
	* gmodule.c (g_module_open): changed the return type for the
	GModuleCheckInit function to be a string, describing the error
	condition.
	(g_module_symbol): show the failing symbol on error messages.

Fri Aug 14 02:24:39 1998  Tim Janik  <timj@gtk.org>

	* Makefile.am: feature the G_LOG_DOMAIN macro to set the log domain
	to "GModule" upon compilation. we currently have to add this definition
	to the DEFS variable.
	* testgmodule.c: we need an ugly #undef G_LOG_DOMAIN at the start
	of this file currently, since automake doesn't support per target
	_CFLAGS yet.

Mon Aug 10 03:35:57 1998  Tim Janik  <timj@gtk.org>

	* gmodule.c: minor changes to internal interface.
	* gmodule-dl.c: 
	* gmodule-dld.c: put some comments into the files, and provided
	better error checking for shl_findsym(). whish i had a system to
 	test this stuff on.

Mon Aug 10 02:18:31 1998  Tim Janik  <timj@gtk.org>

	* Makefile.am (lib_LTLIBRARIES): for now, skip the dependency on
	-lglib for libgmodule-1.1.la, libgplugin_a.la and libgplugin_b.la
	since this clashes with inter-library-dependencies for not installed
	libraries. glib-config takes care of this for the usuall case, but
	there needs to be a better way...

Sun Aug  9 15:57:38 1998  Tim Janik  <timj@gtk.org>

	* testgmodule.c: test program for GModule.
	* libgplugin_a.c: 
	* libgplugin_b.c: test plugins for testgmodule.c.

	* gmodule.h: 
	* gmodule.c: GModule library implementation, which is basically
	a wrapper about system specifc dynamic loading functions.
	

Sun Aug  9 10:31:05 1998  Tim Janik  <timj@gtk.org>

	* ChangeLog start for gmodule.